Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-7050

[R] Fix compiler warnings in R bindings

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 0.15.1
    • 0.16.0
    • R

    Description

      As reported by gcc 8.3.0 on Windows. Maybe you should CI with -Werror?

      array_from_vector.cpp: In member function 'arrow::Status arrow::r::TypedVectorConverter<Type, Derived>::Ingest(SEXP) [with Type = arrow::DoubleType; Derived = arrow::r::NumericVectorConverter<arrow::DoubleType>]':
      array_from_vector.cpp:383:16: warning: 'value' may be used uninitialized in this function [-Wmaybe-uninitialized]
               double value;
                      ^~~~~
      

      Attachments

        Issue Links

          Activity

            People

              npr Neal Richardson
              jeroenooms Jeroen
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m