ARROW-7050: [R] Fix compiler warnings in R bindings

One is the one Jeroen caught, and then there are a few new ones related to the result vs. status changes.

This also adds `-Werror` to the GitHub Actions and Appveyor builds for R to hopefully catch these going forward.

Closes #5940 from nealrichardson/fix-compiler-warnings and squashes the following commits:

0b53d5ef1 <Neal Richardson> Lint
25a546574 <Neal Richardson> Rebase and fix new warnings on master
3fa7e7292 <Neal Richardson> Add -Werror to CI jobs for R
c9e10efdb <Neal Richardson> Fix two unrelated compiler warnings

Authored-by: Neal Richardson <neal.p.richardson@gmail.com>
Signed-off-by: Sutou Kouhei <kou@clear-code.com>